{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 12,
  "lineage": "8cf8d79b-0787-0431-c653-8ec39a21f241",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:142164346080:vpc/vpc-093ff9fa3c0961ace",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f328ccfc2f121fe7",
            "default_route_table_id": "rtb-08adbcd71a13f9063",
            "default_security_group_id": "sg-0da810609b9352f23",
            "dhcp_options_id": "dopt-07b1055093f2d9e3a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-093ff9fa3c0961ace",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08adbcd71a13f9063",
            "owner_id": "142164346080",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs-fargate",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.ecs-fargate",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:142164346080:security-group/sg-005ba8df0b2ab84c1",
            "description": "Fargate service security group",
            "egress": [],
            "id": "sg-005ba8df0b2ab84c1",
            "ingress": [],
            "name": "ecs-fargate-ecs-service-sg-20221016231559020300000001",
            "name_prefix": "ecs-fargate-ecs-service-sg-",
            "owner_id": "142164346080",
            "revoke_rules_on_delete": true,
            "tags": {
              "Name": "ecs-fargate-ecs-service-sg"
            },
            "tags_all": {
              "Name": "ecs-fargate-ecs-service-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-093ff9fa3c0961ace"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs-fargate",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2197530021",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-005ba8df0b2ab84c1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.ecs-fargate.aws_security_group.ecs_service"
          ]
        }
      ]
    }
  ]
}